# naiteh

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  Makefile  PROJECT_ANALYSIS.md  README.md  architecture.md  package.json  pnpm-lock.yaml
.github/workflows/: ci.yml
apps/desktop/: eslint.config.js  index.html  package.json  tsconfig.json  tsconfig.node.json  vite.config.js  vite.config.ts  vitest.config.js  vitest.config.ts
apps/desktop/src/: App.module.css  App.tsx  main.tsx  test-setup.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/desktop/src-tauri/src/commands/: ai.rs  attachments.rs  auth.rs  evernote.rs  journal.rs  mod.rs  notes.rs  rag.rs  search.rs  settings.rs  sync.rs  tags.rs  vault.rs  workspace.rs
apps/desktop/src-tauri/src/domain/: attachment.rs  auth.rs  error.rs  evernote.rs  mod.rs  search.rs  types.rs  vault.rs
apps/desktop/src-tauri/src/services/: attachments.rs  auth.rs  config.rs  conflicts.rs  fs.rs  fs_naming.rs  git.rs  hooks.rs  index.rs  legal_docs.rs  mod.rs  notes.rs  sync_state.rs  timeline.rs  vault_lock.rs
apps/desktop/src-tauri/src/services/evernote/: enml.rs  import.rs  mod.rs  parser.rs
apps/desktop/src/__tests__/: sanity.test.ts
apps/desktop/src/features/ai/: AiPanel.module.css  AiPanel.tsx  index.ts
apps/desktop/src/features/auth/: AdminDashboard.module.css  AdminDashboard.tsx  LoginScreen.module.css  LoginScreen.tsx
apps/desktop/src/features/calendar/: CalendarGrid.module.css  CalendarGrid.tsx  CalendarListPanel.module.css  CalendarListPanel.tsx  dateUtils.ts  index.ts
apps/desktop/src/features/journal/: JournalListPanel.module.css  JournalListPanel.tsx  formatRelative.ts  index.ts
apps/desktop/src/features/notes/: NotesListPanel.module.css  NotesListPanel.tsx  buildTree.ts  index.ts
apps/desktop/src/features/search/: SearchListPanel.module.css  SearchListPanel.tsx  index.ts
apps/desktop/src/features/settings/: FirstRunSetup.module.css  FirstRunSetup.tsx  SettingItem.tsx  SettingsListPanel.module.css  SettingsListPanel.tsx  SettingsModal.module.css  SettingsModal.tsx  index.ts
apps/desktop/src/features/sync/: SyncListPanel.module.css  SyncListPanel.tsx  index.ts
apps/desktop/src/features/tags/: TagsListPanel.module.css  TagsListPanel.tsx  index.ts
apps/desktop/src/lib/: HighlightedText.tsx  activateVault.ts  aiProvider.ts  codeBlockLanguages.ts  editorAttachmentDrop.ts  frontMatter.ts  markdownKeymap.ts  openByRelPath.ts  syncStatusLabel.ts  types.ts  wordCount.ts
apps/desktop/src/lib/__tests__/: HighlightedText.test.tsx  activateVault.test.ts  aiProvider.test.ts  codeBlockLanguages.test.ts  editorAttachmentDrop.test.ts  frontMatter.test.ts  markdownKeymap.test.ts  openByRelPath.test.ts  syncStatusLabel.test.ts  wordCount.test.ts
apps/desktop/src/lib/api/: ai.ts  attachments.ts  auth.ts  evernote.ts  journal.ts  notes.ts  rag.ts  search.ts  settings.ts  sync.ts  tags.ts  vault.ts  workspace.ts
apps/desktop/src/shell/: ActivityBar.module.css  ActivityBar.tsx  AppShell.module.css  AppShell.tsx  CommandPalette.module.css  CommandPalette.tsx  EditorPanel.module.css  EditorPanel.tsx  ListPanelResizer.module.css  ListPanelResizer.tsx  PanelRouter.tsx  StatusBar.module.css  StatusBar.tsx  TagsBar.module.css  TagsBar.tsx  index.ts  useKeyboardShortcuts.ts  useMenuEvents.ts  useWorkspaceLifecycle.ts
apps/desktop/src/shell/__tests__/: ActivityBar.test.tsx  AppShell.test.tsx  CommandPalette.test.tsx  EditorPanel.test.tsx  ListPanelResizer.test.tsx  PanelRouter.test.tsx  TagsBar.test.tsx  useKeyboardShortcuts.test.tsx  useMenuEvents.test.tsx
apps/desktop/src/state/: authStore.ts  editorStore.ts  index.ts  settingsStore.ts  syncStore.ts  uiStore.ts  vaultStore.ts
apps/desktop/src/styles/: reset.css  tokens.css
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/core/src/domain/: error.rs  journal.rs  note.rs  sync.rs
crates/core/src/services/: ai.rs  attachments.rs  auth.rs  conflicts.rs  hooks.rs  index.rs  mod.rs  timeline.rs  workspace.rs
docs/design/: engine-daemon.md
docs/sessions/: session-2026-05-12-1558.md  session-2026-06-10-1626.md
prompt/: Architecture.md
vault/.naiteh/: .gitignore
vault/wiki/: app-config.md  concurrency-safety.md  domain-model.md  glossary.md  index.md  ipc-api.md  product-overview.md  vault-and-data.md
(+18 files in other folders)
