[package]
name = "naiteh-core"
description = "naiteh engine core — vault I/O, notes, sync, auth, AI. No Tauri dependency."
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
git2.workspace = true
thiserror.workspace = true
dirs.workspace = true
chrono.workspace = true
reqwest.workspace = true
sha2.workspace = true
quick-xml.workspace = true
base64.workspace = true
md-5.workspace = true
argon2.workspace = true
password-hash.workspace = true
getrandom.workspace = true

[dev-dependencies]
tempfile.workspace = true
httpmock.workspace = true
