[package]
name = "naiteh"
version = "0.0.0"
description = "naiteh — local-first Markdown notes & journal"
edition = "2021"
rust-version = "1.77"

[lib]
name = "naiteh_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "fs", "macros", "sync"] }
git2 = { version = "0.19", default-features = false, features = ["https", "ssh"] }
thiserror = "1"
dirs = "5"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
sha2 = "0.10"
quick-xml = "0.36"
base64 = "0.22"
md-5 = "0.10"
argon2 = { version = "0.5", features = ["std"] }
password-hash = { version = "0.5", features = ["getrandom"] }
getrandom = "0.2"

[dev-dependencies]
tempfile = "3"

[features]
custom-protocol = ["tauri/custom-protocol"]
