[package]
name = "naiteh"
description = "naiteh — local-first Markdown notes & journal (desktop shell)"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[lib]
name = "naiteh_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
naiteh-core = { path = "../../../crates/core" }
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
chrono.workspace = true
dirs.workspace = true

[dev-dependencies]
tempfile.workspace = true

[features]
custom-protocol = ["tauri/custom-protocol"]
